--- a/Brew_Heaven_Assignment_1/style.css
+++ b/Brew_Heaven_Assignment_1/style.css
@@ -164,14 +164,19 @@
   }
   
   .menu-items-container {
-    display:grid;
-    grid-template-rows: auto;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    display: flex;
+    flex-wrap: wrap;
     gap: 1em;
+    justify-content: flex-start;
   }
   
   .menu-item {
     background-color: var(--secondary-color);
+    margin-top: 10px;
+    flex: 0 0 calc(25% - 1em);
+    max-width: calc(25% - 1em);
+    box-sizing: border-box;
+    margin-bottom: 1em;
     padding: 1em;
     border-radius: 5px;
     text-align: center;
@@ -219,3 +224,19 @@
     margin: 0 10px;
     font-weight: bold;
   }
+
+  button {
+    background: var(--primary-color);
+    color: #ffffff;
+    border: none;
+    padding: 0.8em 1.5em;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    font-weight: bold;
+  }
+  
+  button:hover {
+    background: var(--accent-color);
+  }
+  
